nav bar aligned link and button fixed

--- a/src/Components/Header/Style.module.css
+++ b/src/Components/Header/Style.module.css
@@ -10,3 +10,6 @@ a {
 a:hover{
     cursor: pointer;
 }
+.rightMenu {
+    font-weight: 400;
+} 
